stylesheet.less
/* ... */
.menu-active .widget.extendednavigation#slide-menu { 
	right: 0px; 
}

.menu-active #main { 
	right: 320px; 
	.transition( all, 0.5s, ease);
    -webkit-backface-visibility: hidden;
    @media @mobile {
    	right: 250px;
    }
}

#main, .bk-header {
	.transition( all, 0.5s, ease);
	-webkit-backface-visibility: hidden;
}

.menu-active .bk-nav { 
	display: table;
    height: 100%;
    position: absolute;
    right: 0; 
    .transition( all, 0.5s, ease);
}

// Selected state

.extendednavigation ul li.selected, .extendednavigation ul li:hover ul li.selected, .extendednavigation ul li.folder.selected ul li.selected, .extendednavigation ul li.folder.selected {
    a, .text {
        color: @font-swatch6-color-hover;
    }
}

.extendednavigation ul li.folder.selected ul li .text {
    color: @font-swatch6-color;
}

/* ===============================
   FEATURE
   =============================== */

.widget.feature .feature-bgimg .content {
	vertical-align: bottom;
	.spare {
		padding: 0 40px;
		margin: 0 auto;
		max-width: 1024px;
		@media @mobile {
			padding: 20px;
		}
		h2 {
			margin-bottom: 12px;
            font-family:@font-swatch8-font-family;
            font-size:@font-swatch8-font-size;
            font-weight: @font-swatch8-font-weight;
            line-height:@font-swatch8-line-height;
            color: @font-swatch8-color;
            letter-spacing: @font-swatch8-letter-spacing;
		}
        h3 {
            font-family:@font-swatch9-font-family;
            font-size:@font-swatch9-font-size;
            font-weight: @font-swatch9-font-weight;
            line-height:@font-swatch9-line-height;
            color: @font-swatch9-color;
        }
        h2, h3 {
            @media @mobile {
                margin-bottom: 3px;
            }
        }
		h2 span, h3 span {
			background-color: darken(@color-swatch3,23%);
			width: auto;
			padding: 8px 15px;
            display: inline-block;
		}
        h2 span {
            @media @mobile {
                font-size: @font-swatch3-font-size;
                line-height: @font-swatch3-line-height;
            }
        }
        h3 span {
            @media @mobile {
                font-size: @font-swatch5-font-size;
                line-height: @font-swatch5-line-height;
            } 
        }
		.feature-btn button.btn {
			padding: 8px 15px 13px;
			span:after {
				content: '\003E';
				font-size: 1em;
				padding-left: 10px;
			}
		}
	}
}

/* ===============================
   BLOCK QUOTE
   =============================== */

  blockquote {
    &:before {
        color: @color-swatch3;
    }
  }

/* ===============================
   IMAGE WIDGET
   =============================== */

.widget.image span.image-title {
	padding: 5px;
	margin: 0;
	clear: both;
}


/* ===============================
   FORMS
   =============================== */

.widget.profile form {
    margin: 0 0 10px;
}

.contactform input,
.widget.signupform form fieldset input,
.contactform textarea,
.blogsearch input,
select,
input[type=text],
input[type=email],
input[type=search] {
    background-color: @color-swatch2;
    border: 1px solid darken(@color-swatch2,2%);
    text-indent: 0;
    height: 42px;
    vertical-align: middle;
    border-radius: 0;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    margin-bottom: 5px;
    @media @mobile {
    	width: 100%;
        margin-bottom: 10px;
    }
    &:hover, &:focus {
    	border: 1px solid darken(@color-swatch2,8%);
    	outline: none;
    }
}

.contactform textarea,
textarea {
	height: auto;
	min-height: 150px;
	resize: vertical;
}

.signupform fieldset label {
    margin-bottom: 0;
}

.signupform fieldset button {
    position: relative;
    top: -1px;
}

.signupform label,
.contactform label,
label {
    color: @color-swatch3;
}

.widget.profile form fieldset input {
    background-color:  @color-swatch1;
    border: 1px solid darken(@color-swatch2,2%);
    text-indent: 0;
    height: 42px;
    vertical-align: middle;
    @media @tablet {
        width: 100%;
    }
    &:hover, &:focus {
        border: 1px solid darken(@color-swatch2,8%);
        outline: none;
    }
}


.blogsearch {
    form {
        label {
        	display: block;
        }
    }
}

.form-group {
	margin-bottom: 10px;
}

/*  ===============================
    BUTTONS
    =============================== */
.widget.button button,
button.btn, 
.widget.profile form button, 
.signupform fieldset button, 
.contactform button.btn, 
.btn, 
.blogsearch form button, 
.checkout-order-button, 
.checkout-empty-link,
.tweet a,
.widget.paypalbuynow .widget.button.paypal,
.blog-post-more-link a,
.blog-list-footer a,
a.basket-summary-empty-cta.btn, 
.btn.basket-summary-submit,
.ecombasket-remove-button,
.widget.ecombasket .ecombasket-list-container ul li .ecombasket-item-info .ecombasket-remove-button {
    font-family: @font-swatch7-font-family;
    color: @font-swatch7-color;
    font-size: @font-swatch7-font-size;
    font-weight: @font-swatch7-font-weight;
    line-height: @font-swatch7-line-height;
    background-color: @font-swatch7-background-color;
    border: none;
    .border-radius(3px);
    padding: 8px 18px;
    text-decoration: none;
    vertical-align: middle;
    margin: 0;
    &:hover {
        background-color: @font-swatch7-background-color-hover;
		text-decoration: none;
    }
}

.signupform fieldset button {
    padding: 6px 18px 9px;
    margin-left: 5px;
    @media @tablet {
	    margin-left: 0;
	    margin-top: 5px;
    }
} 

@media @tablet {
	.blogsearch form button,
	.widget.profile form button {
		margin-top: 5px;
	}
}

.ecombasket-summary-link {
	display: inline-block;
}

a.basket-summary-empty-cta.btn, a.btn.ecom-product-go-to-checkout-btn, .blog-post-more-link a, .blog-list-footer a {
    padding: 13px 18px !important;
}

.tweet {
    margin: 5px 0;
}
/* ... */

